--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a href="https://www.facebook.com" class="header__navbar-icon-link">
                                 <i class="header__navbar-icon fab fa-facebook"></i>
                             </a>
-                            <a href="" class="header__navbar-icon-link">
+                            <a href="https://www.instagram.com/" class="header__navbar-icon-link">
                                 <i class="header__navbar-icon fab fa-instagram"></i>
                             </a>
                         </li>
