--- a/index.html
+++ b/index.html
@@ -693,7 +693,31 @@
             </div>
         </div>
         <div class="footer">
-            
+            <div class="grid">
+                <div class="grid__row">
+                    <div class="grid__column-2-4">
+                        <h3 class="footer__header">hello world</h3>
+                        <a href="" class="footer__links">text gmail</a>
+                    </div>
+                    <div class="grid__column-2-4">
+                        <h3 class="footer__header">hello world</h3>
+                        <a href="" class="footer__links">text gmail</a>
+                    </div>
+                    <div class="grid__column-2-4">
+                        <h3 class="footer__header">hello world</h3>
+                        <a href="" class="footer__links">text gmail</a>
+                    </div>
+                    <div class="grid__column-2-4">
+                        <h3 class="footer__header">hello world</h3>
+                        <a href="" class="footer__links">text gmail</a>
+                    </div>
+                    <div class="grid__column-2-4">
+                        <h3 class="footer__header">hello world</h3>
+                        <a href="" class="footer__links">text gmail</a>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 
