--- a/index.html
+++ b/index.html
@@ -123,9 +123,11 @@
                             </a>
                         </li>
                         <li class="header__navbar-item header__navbar-item-link-strong header__navbar-item--separate">
-                            <a href="./modal.html" class="header__navbar-links">Đăng Kí</a>
+                            <a href="./registration.html" class="header__navbar-links">Đăng Kí</a>
                         </li>
-                        <li class="header__navbar-item header__navbar-item-link-strong header__navbar-login">Login</li> 
+                        <li class="header__navbar-item header__navbar-item-link-strong header__navbar-login">
+                            <a href="./modal.html" class="header__navbar-links">Login</a>
+                        </li> 
                         <!-- <li class=" header__navbar-item header__navbar-user">
                             <img src="./assets/img/AC.png" alt="" class="header__navbar-user-img">
                             <span class="header__navbar-user-name">ACan Truong</span>
