--- a/modal.html
+++ b/modal.html
@@ -12,61 +12,17 @@
     <link rel="stylesheet" href="./assets/fonts/fontawesome-free-5.12.1/css/all.min.css">
 </head>
 <body>
-    <div class="modal login__form">
+    <div class="modal">
         <div class="modal__overlay">
         </div>
         <div class="modal__body">
-            <!-- <div class="authen-form">
-                <div class="auth-form__container">
-                    <div class="auth-form__header">
-                        <h3 class="auth-form__heading">Dang Ki</h3>
-                        <span class="auth-form__switch-btn">login</span>
-                    </div>
-                    <div class="auth-form__form">
-                        <div class="auth-form__group">
-                            <input type="text" class="auth-form__input" placeholder="email cua ban">
-                        </div>
-                        <div class="auth-form__group">
-                            <input type="password" class="auth-form__input" placeholder="mat khau cua ban">
-                        </div>
-                        <div class="auth-form__group">
-                            <input type="password" class="auth-form__input" placeholder="nhap lai mat khau">
-                        </div>
-                    </div>
-                    <div class="auth-form__aside">
-                        <p class="auth-form__policy-text">
-                            bang viec dang ki ban da dong y voi shop ban co my chat luong
-                            <a href="#" class="auth-form__text-link">dieu khoan dich vu</a>
-                            <a href="#" class="auth-form__text-link">chinh sach bao mat</a>
-                        </p>
-                    </div>
-                    <div class="auth-form__controls">
-                        <button class="btn btn--normal auth-form__controls-back">TRO LAI</button>
-                        <button class="btn btn--primary">DANG KI</button>
-                    </div>
-                </div>
-                <div class="auth-form__socials">
-                    <a href="" class="auth-form__socials-facebook btn btn--size-s btn__with-icon">
-                        <i class="auth-form__socials-icon fab fa-facebook-square"></i>
-                        <span class="auth-form__socials-lable">
-                            Ket noi voi FaceBook
-                        </span>
-                    </a>
-                    <a href="" class="auth-form__socials-google btn btn--size-s btn__with-icon">
-                        <i class="auth-form__socials-icon fab fa-google"></i>
-                        <span class="auth-form__socials-lable">
-                            ket  noi voi google
-                        </span>
-                    </a>
-                </div>
-                
-            </div>  -->
             <!-- login form -->
-             <div class="authen-form registration ">
+             <div class="authen-form ">
                     <div class="auth-form__container">
                         <div class="auth-form__header">
                             <h3 class="auth-form__heading">Đăng nhập</h3>
-                            <span class="auth-form__switch-btn">Đăng kí</span>
+                            <span class="auth-form__switch-btn">
+                                <a href="./registration.html" class="auth-form__switch-link"> Đăng kí</a></span>
                         </div>
                         <div class="auth-form__form">
                             <div class="auth-form__group">
@@ -86,7 +42,8 @@
                         <div class="auth-form__controls">
                             <button class="btn btn--normal auth-form__controls-back">
                                 <a href="./index.html"> Trở Lại</a></button>
-                            <button class="btn btn--primary">Đăng Kí</button>
+                            <button class="btn btn--primary">
+                                <a href="./registration.html" class="button__link"> Đăng Kí</a></button>
                         </div>
                     </div>
                     <div class="auth-form__socials">
