--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <script src="./main.js"></script>
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap&subset=vietnamese">
@@ -272,24 +273,52 @@
     </div>
     <div class="product__container">
         <div class="grid wide">
-            <div class="grid__row" style="background-color: #FFFF;width: 100%; height: 1000px;">
-                <header style="background-color: aqua; width: 100%; height: 30px;">
-                    <nav>wdibfsdivcbidsgc</nav>
+            <div class="grid__row product__cover">
+                <header class="product__price">
+                    20.000
                 </header>
-                <div class="grid__colum-10">
-                    <div class="grid__colum-5">
-                        <div class="product__img" style="background-image: url(https://genk.mediacdn.vn/thumb_w/640/2019/photo1575277702995-1575277703078-crop-1575277744878598491265.jpg);">
+                <hr>
+                <div class="grid__column-10">
+                    <div class="product__item">
+                        <div class="grid__column-5">
+                            <div class="img-zoom-container">
+                                    <img id="myimage" src="https://genk.mediacdn.vn/thumb_w/640/2019/photo1575277702995-1575277703078-crop-1575277744878598491265.jpg" width="400" height="340">
+                                    <div id="myresult" class="img-zoom-result"></div>
+                          </div>
+                        </div>
+                        <div class="grid__column-5 product__info" style="background-color: aqua;">
+                            <ul class="product__list">
+                                <li class="product-info-item">
+                                    <span>20.0000</span>
 
+                                </li>
+                                <li class="product-info-item">
+
+                                </li>
+                                <li class="product-info-item">
+
+                                </li>
+                                <li class="product-info-item">
+
+                                </li>
+                                <li class="product-info-item">
+
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="grid__colum-5"></div>
-                </div>
-                <div class="grid__colum-2">
 
+                    </div>
+                <div class="grid__column-2">
+                    iddhbciasbzcix
                 </div>
             </div>
         </div>
 
     </div>
+    <script>
+            // Initiate zoom effect:
+            imageZoom("myimage", "myresult");
+    </script>
 </body>
 </html>
