--- a/index.html
+++ b/index.html
@@ -491,21 +491,22 @@
                     <button class="btn btn--normal auth-form__controls-back">
                         <a href="./index.html" class="button__link"> Trở lại</a>
                     </button>
-                    <button class="btn btn--primary">
-                       <a href="./registration.html" class="button__link"> Đăng Kí</a></button>
+                    <button class="btn btn--primary" onclick="document.getElementById('id02').style.display='block'" style="width:auto; background-color: transparent;">
+                        
+                       <a href="#" class="button__link"> Đăng Kí</a></button>
                 </div>
             </div>
             <div class="auth-form__socials">
                 <a href="" class="auth-form__socials-facebook btn btn--size-s btn__with-icon">
                     <i class="auth-form__socials-icon fab fa-facebook-square"></i>
                     <span class="auth-form__socials-lable">
-                        Kết nối với Facebook
+                        Facebook
                     </span>
                 </a>
                 <a href="" class="auth-form__socials-google btn btn--size-s btn__with-icon">
                     <i class="auth-form__socials-icon fab fa-google"></i>
                     <span class="auth-form__socials-lable">
-                        Kết nối với Google
+                        Google
                     </span>
                 </a>
             </div>
@@ -519,7 +520,7 @@
   <form class="modal-content animate" action="" method="post">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="closemodal" title="Close Modal">&times;</span>
-      <img src="./assets/img/AC.png" alt="Avatar" class="avatar">
+      <img src="./assets/img/johndoe.png" alt="Avatar" class="avatar">
     </div>
 
     <div class="container">
